# web_development-frontend-with-bootstrap

./: .gitignore  pyproject.toml
html/: catalog.html  category.html  contact.html  index.html  main.html
src/: main.py
