[tool.poetry]
name = "web_development-frontend-with-bootstrap "
version = "0.1.0"
description = ""
authors = ["Andrej <andrej@mail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
